=======
CHANGES
=======

3.6.1 (unreleased)
------------------

- Adapt to the move of IDefaultViewName from zope.component.interfaces
  to zope.publisher.interfaces.

3.6.0 (2009-02-01)
------------------

- Fix AttributeError in ``zope.app.testing.setup.setUpTestAsModule``
  (when called without name argument).

- Use ``zope.container`` instead of ``zope.app.container``.

- Use ``zope.site`` instead of ``zope.app.folder`` and
  ``zope.app.component`` for some parts.

3.5.6 (2008-10-13)
------------------

- Change argument variable name in provideAdapter to not conflict with
  buitin keyword in Python 2.6.

3.5.5 (2008-10-10)
------------------

- Re-configured functional test setup to create test-specific instances
  of HTTPCaller to ensure that cookies are not shared by doctests
  in a test suite.

3.5.4 (2008-08-25)
------------------

- Clean up some transaction management in the functional test setup.

3.5.3 (2008-08-22)
------------------

- Fix isolation enforcement for product configuration around individual tests.

3.5.2 (2008-08-21)
------------------

- Added missing dependency information in setup.py.

- Added missing import.

- Repair memory leak fix released in 3.4.3 to be more sane in the presence of
  generations.

3.5.1 (2008-08-20)
------------------

- Correct Fred's "I'm a doofus" release.

3.5.0 (2008-08-20)
------------------

- Add support for product-configuration as part of functional layers; this
  more closely mirrors the configuration order for normal operation.

3.4.3 (2008-07-25)
------------------

- Fix memory leak in all functional tests.
  see: https://bugs.launchpad.net/zope3/+bug/251273

3.4.2 (2008-02-02)
------------------

- Fix of 599 error on conflict error in request
  see: http://mail.zope.org/pipermail/zope-dev/2008-January/030844.html

3.4.1 (2007-10-31)
------------------

- Fixed deprecation warning for ``ZopeSecurityPolicy``.

3.4.0 (2007-10-27)
------------------
